--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="section">
       <h2>Parabéns amor!</h2>
-      <p>Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!</p>
+      <p>Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!</p>
     </div>
     
     <div class="section">
