--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="background.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<script>
+		window.addEventListener('load', function() {
+		  document.body.style.opacity = 1;
+		});
+	</script>
   </head>
   <body>
     <div class="section">
