--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <title>Parabéns Lara!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="background.css">
+	<!--<link rel="stylesheet" href="background.css">-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<script>
 		window.addEventListener('load', function() {
 		  document.body.style.opacity = 1;
 		});
 	</script>
+	<style>
+				body {
+					margin: 0;
+					padding: 0;
+					background-image: url('https://lh3.googleusercontent.com/pw/AJFCJaVhSnfKev99lgg-M00RL1n6lYF1gASaPZm94XUjYSvDcs29b6g1iOmuSWE_WuHjLdOpkL-9vcl5yvTCX9-aTj4d3yC7NFRuj1Cj2dgadnXIvecdX35h4VcS1z2WodJGkFsHLs-AhvOwDhEHXtWmz5BCvQ=w1106-h1474-s-no');
+					background-size: cover;
+					background-position: center;
+					background-repeat: no-repeat;
+					transition: background 1s ease-in-out;
+				}
+	</style>
   </head>
   <body>
     <div class="section">
