--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="section">
       <h2>Parabéns amor!</h2>
       <p>Filmes e séries já está.</p>
+	  <!-- acabar as secções + pensar em mais secções? + pagina para ela ler oq disser no postal caso ñ perceba a letra + background + ... + ver nota no fim-->
 	  <p>Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!Espero que tenha um dia maravilhoso cheio de alegria e amor. Quero que saiba o quanto é importante para mim e o quanto te amo. Este site é um pequeno presente para celebrar o seu aniversário. Espero que goste!</p>
     </div>
     
