--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="articleRight">
 						<div class="articleRightInner">
 							<!-- METER FOTO DA HILL-->
-							<img src="./photo_hill.JPG" alt="" decoding="async" width="220" height="220" data-file-width="1080" data-file-height="1080" />
+							<img src="./photo_hill.jpg" alt="" decoding="async" width="220" height="220" data-file-width="1080" data-file-height="1080" />
 														
 						</div>Piolhos no seu habitat natural.</div>
 					<p><strong>Lara Sofia Sacramento Pereira</strong> ainda não Veríssimo, mas não deve faltar muito, nascida a 5 (5 de maio de 2003 às 17h55 (acho eu, espero eu, não me mates amor)), é uma princesa que caiu de paraquedas na minha vida.</p>
