sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 					<h2>Curiosidades</h2>
 					<h3>Filmes e Séries</h3>
 					<!-- mudar alguma coisa na formatacao da tabela?-->
-					<table border="2"  style="text-align:center;">
+					<table border="2"  style="text-align:center; width:80%">
 					<tbody><tr>
-					<th style="width:75px">Status</th>
-					<th style="width:250px">Nome</th>
-					<th style="width:100px">Onde</th>
-					<th style="width:100px">Data</th>
+					<th style="width:10%">Status</th>
+					<th style="width:40%">Nome</th>
+					<th style="width:25%">Onde</th>
+					<th style="width:25%">Data</th>
 					</tr>
 					<tr>
 					<th>✅</th>
