sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -80,26 +80,7 @@
 					<p><strong>Lara Sofia Sacramento Pereira</strong> ainda não Veríssimo, mas não deve faltar muito, nascida a 5 (5 de maio de 2003 às 17h55 (acho eu, espero eu, não me mates amor)), é uma princesa que caiu de paraquedas na minha vida. Lara <del>ainda não</del> vive na HILL com o seu namorado e os seus dois filhotes super fofos, que têm um armário com mais roupa que uma loja de roupa, porque Lara não restiste a roupas de bebés, principalmente se estiverem em promoção.</p>
 					<!-- CASO QUEIRA METER MAIS COISAS-->
 					<p>Adora carros, pricipalmente <a href="https://pt.wikipedia.org/wiki/Ford_Mustang">Mustangs</a>, é uma rapariga super inteligente em tudo e mais alguma coisa, desenrasca-se como se nada fosse e tem capacidades exorbitantes no que toca a fazer as coisas como devem ser feitas (super perfecionista). Nos tempos livres atura o seu namorado super lindo 10/10 e come ovos kinders para ele poder ver os brinquedos (que infantil, enfim).</p>
-
-					<div class="contentsPanel">
-						<div class="contentsHeader">Um título</div>
-						<ul>
-							<li>
-								<span>1</span><a href="#">Amor</a>
-								<ul>
-									<li><span>1.1</span><a href="#">eu não</a> </li>
-									<li><span>1.2</span><a href="#">sei oq</a> </li>
-									<li><span>1.3</span><a href="#">meter aqui</a></li>
-									<li><span>1.4</span><a href="#">mas tbm não</a></li>
-									<li><span>1.5</span><a href="#">queria apagar</a></li>							
-							</ul>
-							</li>
-							<li><span>2</span><a href="#">Linda</a></li>
-							<li><span>3</span><a href="#">Génia</a></li>
-							<li><span>4</span><a href="#">Adoro-te piolha</a></li>
-						</ul>
-					</div>
-		
+					<!-- MUDAR NOME DE CURIOSOIDADES?-->
 					<h2>Curiosidades</h2>
 					<h3>Filmes e Séries</h3>
 					<table border="2"  style="text-align:center; width:90%">
