sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
 						<li><a href="#">Help</a></li>
 						<li><a href="#">About</a></li>
 						<li><a href="#">Portal</a></li>
-					</ul>
-					
-					<!-- POSSO MEXER AQUI VIDEOS DE BEBES FOFOS-->
-					<!-- em vez de 123 meter as datas
-					A NOITE DE DEZEMBRO-->
+					</ul>					
+					<!-- POSSO MEXER AQUI VIDEOS DE BEBES FOFOS + reordenar-->
 					<h3>PRESS ME !! (no fim)</h3>
 					<ul>
 						<li><a href="./video_babywalk.mp4" target="_blank" rel="noopener">031222</a></li>
@@ -81,7 +78,7 @@
 							<img src="./photo_hill.jpg" alt="" decoding="async" width="220" height="220" data-file-width="1080" data-file-height="1080" />							
 						</div>Piolhos no seu habitat natural.</div>
 					<p><strong>Lara Sofia Sacramento Pereira</strong> ainda não Veríssimo, mas não deve faltar muito, também conhecida como <a target="_blank" href= "https://youtu.be/k6M5C-oKw9k?t=26">Miss Independent</a>, nasceu a 5 (isto é, 5 de maio de 2003 às 17h55 (acho eu, espero eu, não me mates amor)), é uma princesa que caiu de paraquedas na minha vida (e ainda bem). Lara <del>ainda não</del> vive na HILL com o seu namorado e os seus dois filhotes super fofos, que têm um armário com mais roupa que uma loja de roupa, porque Lara não restiste a roupas de bebés, principalmente se estiverem em promoção.</p>
-					<!-- referir o SPARKS (escritor) + sim na areia + voos flighradar-->
+					<!-- referir o SPARKS (escritor) + sim na areia + voos flighradar -->
 					<p>Adora carros, pricipalmente <a target="_blank" href="https://pt.wikipedia.org/wiki/Ford_Mustang">Mustangs</a>, é uma rapariga super inteligente em tudo e mais alguma coisa, desenrasca-se como se nada fosse e tem capacidades exorbitantes no que toca a fazer as coisas como devem ser feitas (super perfecionista). Nos tempos livres atura o seu namorado super lindo 10/10 e come ovos kinders para ele poder ver os brinquedos (que infantil, enfim).</p>
 					<!-- MUDAR NOME DE CURIOSOIDADES?-->
 					<h2>Curiosidades</h2>
