sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="canonical" href="http://html5-templates.com/" />
+		
+		<!-- mudar este icon da apple q aparece no whatsapp-->
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 		
         <!-- Place favicon.ico in the root directory -->
@@ -194,7 +196,6 @@
 						<li>Smurf</li>
 						<li>Super Mario</li>
 					</ul>
-					<!-- ESTAMOS AQUI-->
 					<p>Se há mais? Provavelmente, mas diria que estes são os mais importantes, espero não me ter esquecido de algum que gostes muito, Girassol.</p>
 					
 					
