sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="canonical" href="http://html5-templates.com/" />
 		
-		<!-- mudar este icon da apple q aparece no whatsapp-->
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<!-- mandar pelo wpp e ver se aparece smurf ok-->
+        <link rel="apple-touch-icon" href="./apple-touch-icon.png">
 		
         <!-- Place favicon.ico in the root directory -->
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+		
 		
         <link rel="stylesheet" href="style.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
