sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<li><a href="./video_babywalk.mp4" target="_blank" rel="noopener">031222</a></li>
 						<li><a href="./video_instamessi.mp4" target="_blank" rel="noopener">260223</a></li>
 						<li><a href="./photo_opiniaobot.png" target="_blank" rel="noopener">210323</a></li>						
-						<li><a href="https://photos.google.com/share/AF1QipNGEjtIxrwf7yNtydaQplj57AqatN_s4JsbGOmyfM_Woo-VgXvOQ-7AyW9iDTT3gA/photo/AF1QipNCvJ8Xp04O9WFv5dMEBg7fOD50KfAbGnUbNIUn?key=d3BEX2dYVTZzNVNhTU9TNUVQVThCV1pmRXhHejRB" target="_blank" rel="noopener">190423</a></li>
+						<li><a href="#" target="_blank" rel="noopener">190423</a></li>
 					</ul>
 				</div>	
 			</div>
