sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
 					<td>Cinema 🫂</td>
 					<td>12/04/2023</td></tr>
 					<tr>
+					<th>✅</th>
+					<td>Mistério a Bordo</td>
+					<td>Netflix 🫂</td>
+					<td>26/04/2023</td></tr>
+					<tr>
+					<th>✅</th>
+					<td>Mistério em Paris</td>
+					<td>Netflix 🫂</td>
+					<td>27/04/2023</td></tr>
+					<tr>
 					<th>⏯</th>
 					<td>X-Men</td>
 					<td>🫂</td>
