sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 						<div class="header">FIM</div>
 						<div style="text-align: left; padding-left: 5px;">Amorzinho,</div>
 						<div style="text-align: left; padding-left: 5px;" class="linklist">Espero que tenhas gostado da tua pequena prendinha, dei o meu melhor, prometo que quando voltares levas com o resto da tua prenda (eu, logicamente). Por fim, lá em cima do lado esquerdo tens uns números que dizem "PRESS ME", meti lá só para te chatear mais um pouquinho e porque achei engraçado, não sei, sou totó, o teu totó. 🤭</div>
-						<div class="subtitle">ADORO-TE LARA ❤️</div>
+						<div class="subtitle">AMO-TE LARA ❤️</div>
 					</div>
 				</div>
 				<div class="pagefooter">
